--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -5,7 +5,7 @@
     <title>Getting Started</title>
   </head>
   <body>
-    <input type="file" id="file">
-    <script src="main.js"></script>
+    <input type="file" id="file" />
+    <script src="main.js" />
   </body>
 </html>
