--- a/demo/src/index.html
+++ b/demo/src/index.html
@@ -5,7 +5,18 @@
     <title>Getting Started</title>
   </head>
   <body>
-    <input type="file" id="file" />
-    <script src="main.js" />
+  <div class="wrap">
+    <div id="original"></div>
+    <div id="encoded"></div>
+    <div class="ruler"></div>
+    <div id="squoosh-browser">
+      <h1>Squoosh Browser</h1>
+      <p>Please upload an image file:</p>
+      <div class="file-input-wrap">
+        <input type="file" class="file-input" id="file" name="upload" required>
+        <label class="file-input__label" for="file">Choose file</label>
+      </div>
+    </div>
+  </div>
   </body>
 </html>
